--- a/docs/src/components/c-dialogs/c-dialogs.css
+++ b/docs/src/components/c-dialogs/c-dialogs.css
@@ -1,6 +1,6 @@
 .dialogo {
     height: 100%;
-    width: 100%;
+    width: auto;
     padding: 10px;
     border: none !important;
     background-color: transparent;
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     height: auto;
-    width: 100%;
+    width: auto;
     position: relative;
     
 }
