--- a/docs/src/components/open-editor/open-editor.css
+++ b/docs/src/components/open-editor/open-editor.css
@@ -16,7 +16,7 @@
 .open-editor .panel_inferior {
     border: 0px solid black;
     height: 40px;
-    background-color: #111;
+    background-color: #000;
 }
 
 .open-editor .disposicion_horizontal {
@@ -33,17 +33,18 @@
     min-width: 40px;
     max-width: 40px;
     z-index:10;
+    background-color: #000;
 }
 
 .open-editor .panel_superior {
     border-bottom: 1px solid #111;
-    background-color: #0B0B0B;
+    background-color: #000;
 }
 
 .open-editor .panel_inferior {
     border-top: 1px solid black;
     border-bottom: 0px solid black;
-    background-color: #0B0B0B;
+    background-color: #000;
 }
 
 .open-editor .panel_derecho {
@@ -57,6 +58,7 @@
 .open-editor .icono_contextual {
     display: inline-block;
     margin: 4px;
+    margin-bottom: 0px;
     width: 32px;
     height: 23px;
     min-width: auto;
@@ -67,10 +69,11 @@
     vertical-align: middle;
     font-size: 7px;
     font-weight: bold;
-    padding-top: 5px;
-    border: none;
+    padding-top: 10px;
+    border: 1px solid #FFF;
     cursor: pointer;
-    box-shadow: 0 0 5px black;
+    box-shadow: inset 0px 0px 10px black, 0px 0px 2px white;
+    opacity: 0.8;
     /*
     box-shadow:
       rgba(50, 50, 93, 0.25) 0px 10px 20px 0px inset,
@@ -85,16 +88,21 @@
 }
 
 .open-editor .panel_central {
-    border-left: 1px solid #112111;
-    border-right: 1px solid #112111;
+    border-left: 1px solid #DDD;
+    border-right: 1px solid #DDD;
     background-color: #040404;
     border-radius: 0pt;
 }
 
 .open-editor .panel_superior {
     padding-top: 0px; /*PIXEL PERFECT =D*/
-    border-top: 2px solid black;
-    border-bottom: 1px solid black;
+    border-top: 1px solid #DDD;
+    border-bottom: 1px solid #DDD;
+}
+
+.open-editor .panel_inferior {
+    border-top: 1px solid #DDD;
+    border-bottom: 1px solid #DDD;
 }
 
 .open-editor .contenedor_en_panel_superior {
