--- a/docs/src/components/open-editor/open-editor.html
+++ b/docs/src/components/open-editor/open-editor.html
@@ -29,7 +29,7 @@
                     <template v-if="nodo_actual !== '/'">
                         <div class="icono_contextual fondo_verde"
                             title="Copiar fichero o directorio"
-                            v-on:click="copiar_fichero">
+                            v-on:click="copiar_fichero_o_directorio">
                             Copy
                         </div>
                     </template>
@@ -48,6 +48,16 @@
                             title="Eliminar"
                             v-on:click="() => eliminar_fichero_actual()">
                             Delete
+                        </div>
+                        <div class="icono_contextual fondo_rojo"
+                            title="Exportar como URL"
+                            v-on:click="exportar_como_url">
+                            Link
+                        </div>
+                        <div class="icono_contextual fondo_azul"
+                            title="Descargar como fichero"
+                            v-on:click="descargar_fichero">
+                            Get
                         </div>
                     </template>
                 </div>
@@ -89,7 +99,7 @@
                                             </li>
                                         </template>
                                         <template v-else>
-                                            <li>
+                                            <li style="text-align: center;">
                                                 <span class="font_size_small">There are no files or directories here.</span>
                                             </li>
                                         </template>
@@ -116,6 +126,11 @@
                             v-on:click="() => compilar_fichero_actual()">
                             Compile
                         </div>
+                        <div class="icono_contextual fondo_blanco"
+                            title="Visualiza el código"
+                            v-on:click="() => visualizar_fichero_actual()">
+                            View
+                        </div>
                         <div class="icono_contextual fondo_rosa"
                             title="Formatea el código"
                             v-on:click="() => formatear_fichero_actual()">
@@ -140,11 +155,6 @@
                             ref="serie_iconos_derechos"
                             :iconos-predefinidos="iconos_derechos"
                             identificador-de-contexto="derechos" />
-                        <div class="icono_contextual fondo_rojo"
-                            title="Exportar como URL"
-                            v-on:click="exportar_como_url">
-                            Export
-                        </div>
                     </template>
                     <template v-if="nodo_actual_es_directorio">
                         <div class="icono_contextual fondo_azul"
@@ -163,23 +173,42 @@
                             v-on:click="eliminar_carpeta_actual">
                             Dir--
                         </div>
+                        <div class="icono_contextual fondo_blanco"
+                            title="Importar directorio como JSON"
+                            v-on:click="importar_directorio_como_json">
+                            &lt;&lt; JSON
+                        </div>
+                        <div class="icono_contextual fondo_blanco"
+                            title="Exportar directorio como JSON"
+                            v-on:click="exportar_directorio_como_json">
+                            &gt;&gt; JSON
+                        </div>
                     </template>
                 </div>
             </div>
             <div class="panel_inferior">
-                <div class="contenedor_en_panel_superior"
-                    v-if="nodo_actual_es_fichero && editor_de_codigo_posicion_cursor">
-                    <div class="textbox_contextual contexto_inferior nowrap">
-                        <b class="">
-                            <span>
-                                Line: {{ editor_de_codigo_posicion_cursor.start.line }}:{{ editor_de_codigo_posicion_cursor.start.column
-                                }}-{{ editor_de_codigo_posicion_cursor.end.line }}:{{ editor_de_codigo_posicion_cursor.end.column }}
-                            </span>
-                            <span> | </span>
-                            <span>
-                                Pos: {{ editor_de_codigo_posicion_cursor.start.offset }}-{{ editor_de_codigo_posicion_cursor.end.offset }}
-                            </span>
-                        </b>
+                <div style="display: flex; flex-direction: row;">
+                    <div class="contenedor_en_panel_superior"
+                        style="flex: 100;">
+                        <template v-if="nodo_actual_es_fichero && editor_de_codigo_posicion_cursor">
+                            <div class="textbox_contextual contexto_inferior nowrap">
+                                <b class="">
+                                    <span>
+                                        Line: {{ editor_de_codigo_posicion_cursor.start.line }}:{{ editor_de_codigo_posicion_cursor.start.column
+                                        }}-{{ editor_de_codigo_posicion_cursor.end.line }}:{{ editor_de_codigo_posicion_cursor.end.column }}
+                                    </span>
+                                    <span> | </span>
+                                    <span>
+                                        Pos: {{ editor_de_codigo_posicion_cursor.start.offset }}-{{ editor_de_codigo_posicion_cursor.end.offset }}
+                                    </span>
+                                </b>
+                            </div>
+                        </template>
+                    </div>
+                    <div style="flex: 1; min-width: 40px;" class="nowrap">
+                        <div title="Alternar consola" class="icono_contextual fondo_blanco" v-on:click="alternar_consola" style="max-height: 18px; padding-top: 7px;">
+                            Console
+                        </div>
                     </div>
                 </div>
             </div>
@@ -187,4 +216,5 @@
     </div>
     <windows-port :contexto="this"></windows-port>
     <c-dialogs :contexto="this"></c-dialogs>
+    <console-hooker :contexto="this"></console-hooker>
 </div>
